<resources>
    <string name="app_name">NoteApp</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="d_note">D-NOTE</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">----------------------- Or login with -----------------------</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="choose_account_recovery_question">Choose Account Recovery Question</string>
    <string name="answer">Answer</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="security_question">Security Question</string>
    <string name="question_answer">Question Answer</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
</resources>