<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/userInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/haveAnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/rectangle"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/userInfo"
        app:layout_constraintStart_toStartOf="@+id/userInfo"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_password"
        app:layout_constraintEnd_toEndOf="@+id/userInfo"
        app:layout_constraintStart_toStartOf="@+id/userInfo"
        app:layout_constraintTop_toTopOf="@+id/userInfo" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="113dp"
        android:layout_height="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/forget_password"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/userInfo"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="@+id/userInfo"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0111FD"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/userInfo"
        app:layout_constraintEnd_toEndOf="@+id/userInfo"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/userInfo"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/haveAnAccount"
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/login_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfo"
        app:layout_constraintVertical_bias="0.222">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/forward_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/haveAnAccount"
        app:layout_constraintBottom_toTopOf="@id/socialMedia"
        tools:layout_editor_absoluteY="516dp" />

    <LinearLayout
        android:id="@+id/socialMedia"
        android:layout_width="409dp"
        android:layout_height="89dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_with"
        app:layout_constraintVertical_bias="0.28">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:padding="10dp"
            app:srcCompat="@drawable/facebook_icon"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:padding="10dp"
            app:srcCompat="@drawable/google_icon"
            tools:ignore="ContentDescription" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>